redid all the logger handling and added clearInv command and fixed drops issues